[gd_scene load_steps=10 format=2]

[ext_resource path="res://prefabs/characters/CharacterAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/characters/character_sprites/swordsman_advanced.png" type="Texture" id=2]
[ext_resource path="res://prefabs/characters/character_sprites/grandma.png" type="Texture" id=3]
[ext_resource path="res://prefabs/characters/Healthbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/characters/Character.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=86]
radius = 12.2063
height = 0.0

[sub_resource type="CircleShape2D" id=87]
radius = 300.0

[sub_resource type="CircleShape2D" id=88]
radius = 28.2974

[sub_resource type="CapsuleShape2D" id=89]
height = 30.7268

[node name="Character" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 8 )
char_control = 2

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -23.291
margin_top = -53.5975
margin_right = -23.291
margin_bottom = -53.5975

[node name="Animations" type="Node2D" parent="."]

[node name="CharacterAnimation" parent="Animations" instance=ExtResource( 1 )]
sprite_reg = ExtResource( 3 )
sprite_adv = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 86 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource( 87 )

[node name="EnemyCheckArea" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCheckArea"]
visible = false
shape = SubResource( 87 )

[node name="EventArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventArea"]
shape = SubResource( 87 )

[node name="AlertArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea"]
shape = SubResource( 87 )

[node name="PursueArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PursueArea"]
shape = SubResource( 87 )

[node name="ActiveRange" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -16 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveRange"]
position = Vector2( 0, -5 )
shape = SubResource( 88 )

[node name="CharacterArea" type="Area2D" parent="." groups=[
"character_area",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterArea"]
position = Vector2( 1.40309, -23.5717 )
shape = SubResource( 89 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[connection signal="health_changed" from="." to="HealthBar" method="_on_Character_health_changed"]
[connection signal="max_health_changed" from="." to="HealthBar" method="_on_Character_max_health_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
